--- a/TriviaApp/Base.lproj/Main.storyboard
+++ b/TriviaApp/Base.lproj/Main.storyboard
@@ -19,13 +19,13 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Thanks you for choosing TriviaApp.. A new fact will appear soon..." textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="kW3-Hv-IAh">
-                                <rect key="frame" x="40" y="92" width="240" height="215"/>
+                                <rect key="frame" x="40" y="113" width="240" height="232"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MMT-8j-aLd">
-                                <rect key="frame" x="52" y="438" width="228" height="40"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MMT-8j-aLd">
+                                <rect key="frame" x="52" y="442" width="228" height="36"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                 <color key="tintColor" red="0.018483837882493987" green="0.02558992346938771" blue="0.01745645132167661" alpha="1" colorSpace="calibratedRGB"/>
@@ -37,7 +37,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Do you know?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hmo-NO-dpD">
-                                <rect key="frame" x="95" y="52" width="130" height="21"/>
+                                <rect key="frame" x="95" y="79" width="130" height="21"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -52,27 +52,39 @@
                                     <action selector="tweetButton" destination="vXZ-lx-hvc" eventType="touchUpInside" id="qsD-Eb-Sme"/>
                                 </connections>
                             </button>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="0Sa-0M-ZBD">
-                                <rect key="frame" x="150" y="120" width="20" height="20"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Trivia App" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nec-gq-b5c">
+                                <rect key="frame" x="90" y="42" width="141" height="30"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="28"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="0Sa-0M-ZBD">
+                                <rect key="frame" x="150" y="152" width="20" height="20"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" red="0.5060688126567261" green="0.78624038861515133" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="Hmo-NO-dpD" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="79" id="04G-Hm-t7g"/>
+                            <constraint firstItem="kW3-Hv-IAh" firstAttribute="top" secondItem="Hmo-NO-dpD" secondAttribute="bottom" constant="13" id="1LI-7P-vdk"/>
                             <constraint firstItem="MMT-8j-aLd" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="36" id="2Y4-dM-oGC"/>
+                            <constraint firstItem="kW3-Hv-IAh" firstAttribute="top" secondItem="0Sa-0M-ZBD" secondAttribute="bottom" constant="-59" id="5xq-lt-yxD"/>
                             <constraint firstItem="RUu-Ti-mh6" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="109" id="8Oi-84-d3C"/>
                             <constraint firstAttribute="trailingMargin" secondItem="MMT-8j-aLd" secondAttribute="trailing" constant="24" id="8qZ-Y4-4iS"/>
                             <constraint firstAttribute="trailingMargin" secondItem="RUu-Ti-mh6" secondAttribute="trailing" constant="109" id="9qQ-DZ-r4U"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="RUu-Ti-mh6" secondAttribute="bottom" constant="177" id="AWb-9I-oYl"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="MMT-8j-aLd" secondAttribute="bottom" constant="90" id="BHj-aF-fGl"/>
-                            <constraint firstItem="kW3-Hv-IAh" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="72" id="GDS-7Q-MaB"/>
-                            <constraint firstItem="Hmo-NO-dpD" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="32" id="IlZ-O7-qI8"/>
-                            <constraint firstItem="kW3-Hv-IAh" firstAttribute="top" secondItem="Hmo-NO-dpD" secondAttribute="bottom" constant="19" id="MCx-8n-Zz9"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="0Sa-0M-ZBD" secondAttribute="trailing" constant="134" id="E8z-QK-8Qd"/>
+                            <constraint firstItem="kW3-Hv-IAh" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="93" id="GDS-7Q-MaB"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Hmo-NO-dpD" secondAttribute="trailing" constant="79" id="Kh4-En-QNv"/>
                             <constraint firstItem="kW3-Hv-IAh" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="24" id="RkC-vL-6ec"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Hmo-NO-dpD" secondAttribute="trailing" constant="79" id="esC-PK-HTr"/>
-                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="kW3-Hv-IAh" secondAttribute="bottom" constant="261" id="kf9-Di-juA"/>
+                            <constraint firstItem="nec-gq-b5c" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="74" id="SEo-O6-GMm"/>
+                            <constraint firstItem="Hmo-NO-dpD" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="79" id="Sia-r8-zry"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="nec-gq-b5c" secondAttribute="trailing" constant="73" id="aUi-Ka-eiG"/>
+                            <constraint firstItem="nec-gq-b5c" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="22" id="awv-h3-lpe"/>
+                            <constraint firstItem="0Sa-0M-ZBD" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="134" id="cJX-Bo-GZz"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="kW3-Hv-IAh" secondAttribute="bottom" constant="223" id="kf9-Di-juA"/>
                             <constraint firstAttribute="trailingMargin" secondItem="kW3-Hv-IAh" secondAttribute="trailing" constant="24" id="m6r-Qh-m7L"/>
+                            <constraint firstItem="Hmo-NO-dpD" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="59" id="tM7-Dd-C0b"/>
                         </constraints>
                     </view>
                     <connections>
